# imaginex-lambda

./: .gitignore  CHANGELOG.md  Makefile  README.md  package-lock.json  package.json  pyproject.toml  rollup.config.js  temporay.md
.github/workflows/: version.yml
example/: event-absolute-jfif.json  event-absolute.json  event-s3.json
imaginex-lambda/: handler.py
imaginex_lambda/: handler.py  utils.py
imaginex_lambda/lib/: exceptions.py  img_lib.py  utils.py
lib/: index.ts
test/: test_failures.py  test_formats.py  test_success.py
